--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectUrl=http://micronaut.io
 githubSlug=grimmjo/micronaut-nats
 githubBranch=master
 spockVersion=1.2-groovy-2.5
-developers=Joachim Grimm
+developers=grimmjo#Joachim Grimm
 kotlinVersion=1.3.20
 junitVersion=5.3.1
 # Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
