--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -1,3 +1,5 @@
 introduction: Introduction
+whatsNew: What's New
+quickStart: Nats Quick Start
 config: Configuring The Connection
 health: Nats Health Indicator
