adds authentication support
possible authentication username and password or token

fixes #5

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ grailsVersion=3.2.9
 kafkaVersion=2.1.0
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
+testnats=nats/src/test/groovy/com/github/grimmjo/micronaut/nats/docs
