--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
-natsVersion=2.6.5
+natsVersion=2.6.6
 micronautDocsVersion=1.0.3
-micrometerVersion=1.2.0
-micronautVersion=1.2.2
-groovyVersion=2.5.6
+micrometerVersion=1.3.3
+micronautVersion=1.2.9
+groovyVersion=2.5.9
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
@@ -11,11 +11,11 @@ githubSlug=grimmjo/micronaut-nats
 githubBranch=master
 spockVersion=1.2-groovy-2.5
 developers=grimmjo#Joachim Grimm
-kotlinVersion=1.3.20
-junitVersion=5.3.1
+kotlinVersion=1.3.60
+junitVersion=5.5.2
 # Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
 grailsVersion=3.2.9
-kafkaVersion=2.1.0
+kafkaVersion=none
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
-testnats=nats/src/test/groovy/com/github/grimmjo/micronaut/nats/docs
+testnats=nats/src/test/groovy/io/micronaut/docs/nats/docs
