--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -1,18 +1,18 @@
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     // needed because otherwise IntelliJ integration broken
-    compileOnly "io.micronaut:micronaut-inject-java"
+    implementation "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion"
-    compile "io.micronaut:micronaut-messaging"
-    compile "io.micronaut:micronaut-inject"
-    compile "io.nats:jnats:$natsVersion"
-    compileOnly "io.micronaut.configuration:micronaut-micrometer-core"
-    compileOnly "io.micronaut:micronaut-management"
+    implementation "io.micronaut:micronaut-messaging"
+    implementation "io.micronaut:micronaut-inject"
+    implementation "io.nats:jnats:$natsVersion"
+    implementation "io.micronaut.configuration:micronaut-micrometer-core"
+    implementation "io.micronaut:micronaut-management"
     
-    testCompile "io.micronaut:micronaut-inject-groovy"
-    testCompile "io.micronaut:micronaut-inject-java"
-    testCompile "org.testcontainers:spock:1.12.1"
-    testCompile "io.micronaut:micronaut-management"
+    testImplementation "io.micronaut:micronaut-inject-groovy"
+    testImplementation "io.micronaut:micronaut-inject-java"
+    testImplementation "org.testcontainers:spock:1.12.3"
+    testImplementation "io.micronaut:micronaut-management"
 }
 
 licenseTest.enabled = false
