--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,25 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
-natsVersion=2.6.6
-micronautDocsVersion=1.0.3
+micronautDocsVersion=1.0.22
+micronautBuildVersion=1.0.0
 micrometerVersion=1.3.3
-micronautVersion=1.2.9
-groovyVersion=2.5.9
+micronautVersion=1.3.4
+groovyVersion=2.5.10
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
-githubSlug=grimmjo/micronaut-nats
+githubSlug=micronaut-projects/micronaut-nats
 githubBranch=master
 spockVersion=1.2-groovy-2.5
-developers=grimmjo#Joachim Grimm
-kotlinVersion=1.3.60
-junitVersion=5.5.2
+developers=Joachim Grimm
 # Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
-grailsVersion=3.2.9
-kafkaVersion=none
+grailsVersion=3.3.8
+# ignored
+kafkaVersion=""
+natsVersion=2.6.7
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/docs/nats/docs
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.parallel=true
+org.gradle.daemon=true
