--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -3,26 +3,17 @@ dependencies {
     // needed because otherwise IntelliJ integration broken
     implementation "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion"
-    implementation "io.micronaut:micronaut-messaging"
-    implementation "io.micronaut:micronaut-inject"
-    implementation "io.nats:jnats:$natsVersion"
-    implementation "io.micronaut.configuration:micronaut-micrometer-core"
-    implementation "io.micronaut:micronaut-management"
+    api "io.micronaut:micronaut-messaging:$micronautVersion"
+    api "io.nats:jnats:$natsVersion"
+
+    compileOnly "io.micronaut:micronaut-management"
+    compileOnly "io.micronaut.configuration:micronaut-micrometer-core"
     
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+    testImplementation "io.micronaut.test:micronaut-test-spock"
     testImplementation "io.micronaut:micronaut-inject-groovy"
     testImplementation "io.micronaut:micronaut-inject-java"
     testImplementation "org.testcontainers:spock:1.12.3"
     testImplementation "io.micronaut:micronaut-management"
 }
 
-licenseTest.enabled = false
-
-test {
-    jvmArgs '-Duser.country=US'
-    jvmArgs '-Duser.language=en'
-    testLogging {
-        showStandardStreams = true
-        exceptionFormat = 'full'
-    }
-    failFast = true
-}
