--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,11 +39,10 @@ jobs:
          BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
       run: ./gradlew publish docs --no-daemon
     - name: Publish to Github Pages
-      if: success() && github.event_name == 'push' && matrix.java == '8' && github.ref == 'refs/heads/master'
-      uses: micronaut-projects/micronaut-docs-deploy@master
+      if: success() && github.event_name == 'push' && matrix.java == '8'
+      uses: micronaut-projects/github-pages-deploy-action@master
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        GH_REPOSITORY: micronaut-projects/micronaut-docs
         BASE_BRANCH: master
         BRANCH: gh-pages
         FOLDER: build/docs
