--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,33 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '14']
+        java: ['8', '11', '13']
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - uses: actions/cache@v1
       with:
         path: ~/.gradle/caches
-        key: ${{ runner.os }}-micronaut-nats-gradle-${{ hashFiles('**/*.gradle') }}
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: |
-          ${{ runner.os }}-micronaut-nats-gradle-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.gradle/wrapper
-        key: ${{ runner.os }}-micronaut-nats-wrapper-${{ hashFiles('**/*.gradle') }}
-        restore-keys: |
-          ${{ runner.os }}-micronaut-nats-wrapper-
+          ${{ runner.os }}-gradle-
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.java }}   
     - name: Build with Gradle
-      run: ./gradlew check --no-daemon --parallel --continue
+      run: ./gradlew check --parallel --continue
     - name: Publish to JFrog OSS
-      if: success() && github.event_name == 'push' && matrix.java == '8' && github.ref == 'refs/heads/master'
+      if: success() && github.event_name == 'push' && matrix.java == '8'
       env:
          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
          BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
-      run: ./gradlew publish docs --no-daemon
+      run: ./gradlew publish docs
     - name: Publish to Github Pages
       if: success() && github.event_name == 'push' && matrix.java == '8'
       uses: micronaut-projects/github-pages-deploy-action@master
