--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,5 +1,4 @@
 name: Release Notes
-
 on:
   pull_request:
     types: [closed]
@@ -23,10 +22,7 @@ jobs:
           allowUpdates: true
           commit: master
           draft: true
-          name: Micronaut XXX ${{ steps.release_notes.outputs.next_version }}
+          name: Micronaut NATS ${{ steps.release_notes.outputs.next_version }}
           tag: v${{ steps.release_notes.outputs.next_version }}
           bodyFile: CHANGELOG.md
           token: ${{ secrets.GITHUB_TOKEN }}
-
-
-
