--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,17 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails:grails-docs:$grailsVersion"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
         classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
+        classpath "de.marcphilipp.gradle:nexus-publish-plugin:0.4.0"
         classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1'
         classpath "io.micronaut.docs:micronaut-docs-asciidoc-extensions:$micronautDocsVersion"
         classpath "io.micronaut.docs:micronaut-docs-gradle-plugins:$micronautDocsVersion"
+        classpath "io.spring.nohttp:nohttp-gradle:0.0.4.RELEASE"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.28.0"
     }
 }
 
@@ -18,8 +22,7 @@ plugins {
 }
 
 repositories {
-    mavenCentral()
-    maven { url "https://repo.grails.org/grails/core" }
+    jcenter()
 }
 
 version project.projectVersion
@@ -45,11 +48,12 @@ subprojects { Project subproject ->
 
 
     repositories {
-        maven { url "https://repo.grails.org/grails/core" }
+        jcenter()
     }
 
     apply plugin:"java-library"
     apply plugin:"groovy"
+    apply plugin: "com.github.ben-manes.versions"
 
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
@@ -96,6 +100,33 @@ subprojects { Project subproject ->
             }
         }
     }
+
+
+    dependencyUpdates {      
+      rejectVersionIf { mod ->
+        mod.candidate.version ==~ /.+(-|\.?)(b|M|RC)\d.*/ ||
+            ["alpha", "beta", "milestone"].any { mod.candidate.version.toLowerCase(Locale.ENGLISH).contains(it) } ||
+             mod.candidate.group == 'io.micronaut' // managed by the micronaut version
+      }
+      outputFormatter = { result ->
+        if (!result.outdated.dependencies.isEmpty()) {
+            def upgradeVersions = result.outdated.dependencies
+            if (!upgradeVersions.isEmpty()) {
+              println "\nThe following dependencies have later ${revision} versions:"
+              upgradeVersions.each { dep ->
+                def currentVersion = dep.version
+                println " - ${dep.group}:${dep.name} [${currentVersion} -> ${dep.available[revision]}]"
+                if (dep.projectUrl != null) {
+                  println "     ${dep.projectUrl}"
+                }
+              }
+              throw new GradleException('Abort, there are dependencies to update.')
+            }                        
+        }
+      }
+    }
+    check.dependsOn('dependencyUpdates')
+
     dependencies {
         //platform
         annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
@@ -126,7 +157,7 @@ subprojects { Project subproject ->
     apply plugin: 'checkstyle'
 
     checkstyle {
-        toolVersion = 8.10
+        toolVersion = 8.32
         configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
 
         // Per submodule
