--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
 micronautDocsVersion=1.0.22
-micronautBuildVersion=1.0.0
+micronautBuildVersion=1.1.5
 micrometerVersion=1.3.3
-micronautVersion=1.3.4
-groovyVersion=2.5.10
+micronautVersion=1.3.5
+groovyVersion=2.5.11
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
@@ -20,6 +20,7 @@ apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
 org.gradle.caching=true
-org.gradle.jvmargs=-Xmx2048M
-org.gradle.parallel=true
-org.gradle.daemon=true
+org.gradle.daemon=false
+# Workaround for https://issues.sonatype.org/browse/MVNCENTRAL-5276
+# See https://github.com/gradle/gradle/issues/11308 for more details
+systemProp.org.gradle.internal.publish.checksums.insecure=true
