--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=1.0.0
+projectVersion=1.0.1.BUILD-SNAPSHOT
 micronautDocsVersion=1.0.22
 micronautBuildVersion=1.1.5
 micrometerVersion=1.3.3
