--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,8 @@ projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 githubBranch=master
+githubCoreBranch=master
+bomProperty=micronautNatsIoVersion
 spockVersion=1.2-groovy-2.5
 developers=Joachim Grimm
 # Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
@@ -21,6 +23,4 @@ apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
 org.gradle.caching=true
 org.gradle.daemon=false
-# Workaround for https://issues.sonatype.org/browse/MVNCENTRAL-5276
-# See https://github.com/gradle/gradle/issues/11308 for more details
-systemProp.org.gradle.internal.publish.checksums.insecure=true
+
