--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 buildscript {
     repositories {
+        gradlePluginPortal()
         jcenter()
         maven { url "https://dl.bintray.com/micronaut/core-releases-local" }
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url "https://oss.jfrog.org/oss-snapshot-local" }
     }
     dependencies {
-        classpath "io.micronaut.build:micronaut-gradle-plugins:2.0.1"
+        classpath "io.micronaut.build:micronaut-gradle-plugins:2.0.2"
     }
 }
 
-subprojects { Project subproject ->
+subprojects { subproject ->
     group "io.micronaut.nats"
 
     apply plugin: "io.micronaut.build.common"
