--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,4 @@ subprojects { Project subproject ->
 }
 
 apply plugin: "io.micronaut.build.docs"
+apply plugin: "io.micronaut.build.dependency-updates"
