--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,16 @@ buildscript {
     }
 }
 
-subprojects { subproject ->
+subprojects { Project subproject ->
     group "io.micronaut.nats"
 
     apply plugin: "io.micronaut.build.common"
+    apply plugin: "io.micronaut.build.dependency-updates"
 
     if (subproject.parent.name == "docs-examples" || subproject.name == "docs-examples") {
         return
     }
 
-    apply plugin: "io.micronaut.build.dependency-updates"
     apply plugin: "io.micronaut.build.publishing"
 }
 
