--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
 projectVersion=1.0.1.BUILD-SNAPSHOT
-micronautDocsVersion=1.0.23
-micronautBuildVersion=1.1.5
-micrometerVersion=1.3.3
 micronautVersion=2.0.0
-groovyVersion=2.5.11
+groovyVersion=3.0.4
+spockVersion=2.0-M3-groovy-3.0
+micronautTestVersion=1.2.0
+micronautDocsVersion=1.0.23
+natsVersion=2.6.8
+
+
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 githubBranch=master
 githubCoreBranch=master
-bomProperty=micronautNatsIoVersion
-spockVersion=1.2-groovy-2.5
 developers=Joachim Grimm
-# Needed for documentation generation. Needs to be Grails 3.2.x not 3.3.x
-grailsVersion=3.3.8
+
+bomProperty=micronautNatsIoVersion
+
 # ignored
-kafkaVersion=""
-natsVersion=2.6.8
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
