adds missing junit platform to tests in subprojects

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ subprojects { Project subproject ->
         return
     }
 
+    test {
+        useJUnitPlatform()
+    }
     apply plugin: "io.micronaut.build.publishing"
 }
 
