Set github branch to 1.0.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
-githubBranch=master
+githubBranch=1.0.x
 githubCoreBranch=master
 bomProperty=micronautNatsIoVersion
 spockVersion=1.2-groovy-2.5
