Set github core branch to 1.3.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 githubBranch=1.0.x
-githubCoreBranch=master
+githubCoreBranch=1.3.x
 bomProperty=micronautNatsIoVersion
 spockVersion=1.2-groovy-2.5
 developers=Joachim Grimm
