--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 githubBranch=master
-githubCoreBranch=master
+githubCoreBranch=2.0.x
 developers=Joachim Grimm
 
 bomProperty=micronautNatsIoVersion
