--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -1,5 +1,5 @@
 introduction: Introduction
-whatsNew: What's New
+releaseHistory: Release History
 cli: Using the Micronaut CLI
 quickStart: NATS Quick Start
 config: Configuring the connection
