Doc: Add project repository
Fixes #62

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -10,3 +10,4 @@ consumer:
   title: NATS Consumers Using @NatsListener
   consumerMethods: Defining @NatsListener Methods
 health: NATS Health Indicator
+repository: Repository
