Set github branch to 2.0.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
-githubBranch=master
+githubBranch=2.0.x
 githubCoreBranch=2.0.x
 developers=Joachim Grimm
 
