Upgrade build and update dependencies (#152)
* Upgrade to Micronaut 2.5.3

* Upgrade to Groovy 3.0.8

* Upgrade to Spock 2.0-M5-groovy-3.0

* Upgrade to micronaut-test 2.3.2

* Upgrade to Gradle 7.0

* Target Micronaut core 3.0.x

* Upgrade NATS to 2.11.1

* Use Micronaut nullability annotations

* Upgrade GraalVM to 21.1.0

* Upgrade to Gradle 7.0.2

* Upgrade internal build plugins to 4.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 projectVersion=2.2.2-SNAPSHOT
-micronautDocsVersion=1.0.25
-micronautVersion=2.1.4
-micronautTestVersion=2.3.2
+micronautDocsVersion=2.0.0.RC1
+micronautVersion=2.5.3
+micronautTestVersion=2.3.3
 
-groovyVersion=3.0.5
-spockVersion=2.0-M3-groovy-3.0
+groovyVersion=3.0.8
+spockVersion=2.0-M5-groovy-3.0
 
-natsVersion=2.8.0
+natsVersion=2.11.1
 
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
@@ -14,8 +14,7 @@ projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 developers=Joachim Grimm
 
-githubBranch=master
-githubCoreBranch=2.2.x
+githubCoreBranch=3.0.x
 bomProperty=micronautNatsIoVersion
 
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
