upgrade to micronaut 3
adds jakarta.inject:jakarta.inject-api:2.0.0
bump jnats version from 2.11.1 to 2.11.4

fixes #173

--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     api "io.micronaut:micronaut-inject-java"
     api "io.nats:jnats:$natsVersion"
 
+    compileOnly "jakarta.inject:jakarta.inject-api:2.0.0"
     compileOnly "io.micronaut.micrometer:micronaut-micrometer-core"
     compileOnly "io.micronaut:micronaut-management"
 
