--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-projectVersion=2.3.1-SNAPSHOT
+projectVersion=3.0.0-SNAPSHOT
 micronautDocsVersion=2.0.0.RC1
-micronautVersion=2.5.3
-micronautTestVersion=2.3.3
+micronautVersion=3.0.0-M2
+micronautTestVersion=2.3.6
 
 groovyVersion=3.0.8
-spockVersion=2.0-M5-groovy-3.0
+spockVersion=2.0-groovy-3.0
 
-natsVersion=2.11.1
+natsVersion=2.11.4
 
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
