Use new JsonMapper abstraction for serde compatibility (#192)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-projectVersion=3.0.1-SNAPSHOT
-micronautDocsVersion=2.0.0.RC1
-micronautVersion=3.0.0-RC1
-micronautTestVersion=3.0.0-RC1
+projectVersion=3.1.0-SNAPSHOT
+micronautDocsVersion=2.0.0
+micronautVersion=3.2.0
+micronautTestVersion=3.0.3
 
-groovyVersion=3.0.8
+groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
 
 natsVersion=2.11.4
@@ -14,7 +14,7 @@ projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 developers=Joachim Grimm
 
-githubCoreBranch=3.0.x
+githubCoreBranch=3.3.x
 bomProperty=micronautNatsIoVersion
 
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
