adds java-examples

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ micronautTestVersion=3.0.3
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
 
+kotlinVersion=1.6.0
+junitVersion=5.7.2
+kotestVersion=4.6.0
 natsVersion=2.11.4
 
 title=Micronaut Nats
