--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
 subprojects { Project subproject ->
     group "io.micronaut.nats"
 
-    apply plugin: "io.micronaut.build.internal.common"
-    apply plugin: "io.micronaut.build.internal.dependency-updates"
+    if (subproject.name != 'docs-examples') {
+        apply plugin: "io.micronaut.build.internal.common"
+        apply plugin: "io.micronaut.build.internal.dependency-updates"
+    }
+
+    repositories {
+        maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    }
+
+    if (subproject.parent.name == "docs-examples" || subproject.name == "docs-examples") {
+        return
+    }
+
     apply plugin: "io.micronaut.build.internal.publishing"
 }
 
 apply plugin: "io.micronaut.build.internal.docs"
 apply plugin: "io.micronaut.build.internal.dependency-updates"
+
+
+def prepareGuideHotfix = tasks.register("prepareGuideHotfix") {
+    doLast {
+        new File(buildDir, 'doc-resources').mkdirs()
+    }
+}
+
+tasks.named('publishGuide') {
+    dependsOn(prepareGuideHotfix)
+    dependsOn(tasks.javadoc)
+}
