--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,6 @@ plugins {
 rootProject.name = 'nats'
 
 include 'nats'
+include 'docs-examples:example-groovy'
 include 'docs-examples:example-java'
 include 'docs-examples:example-kotlin'
