major update of version management

--- a/docs-examples/example-groovy/build.gradle
+++ b/docs-examples/example-groovy/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'io.micronaut.build.internal.nats-module'
     id "groovy"
 }
 
@@ -7,23 +8,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation project(":nats")
-    testImplementation "io.micronaut:micronaut-inject"
-    testCompileOnly "io.micronaut:micronaut-inject-groovy"
-    testImplementation "org.testcontainers:spock:1.16.2"
-    testImplementation("org.spockframework:spock-core") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
-    testRuntimeOnly "ch.qos.logback:logback-classic:1.2.6"
-    testImplementation "io.projectreactor:reactor-core"
-}
+    testImplementation projects.nats
 
-test {
-    useJUnitPlatform()
+    testCompileOnly mn.micronaut.inject.groovy
+    testImplementation libs.testcontainers
+    testImplementation mn.micronaut.inject
+    testImplementation mn.reactor
+    testImplementation mn.spock
 
-    jvmArgs '-Duser.country=US'
-    jvmArgs '-Duser.language=en'
-    failFast = true
 }
 
 tasks.withType(GroovyCompile) {
