--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,11 @@
 projectVersion=3.1.0-SNAPSHOT
+projectGroup=io.micronaut.nats
 micronautDocsVersion=2.0.0
-micronautVersion=3.2.0
-micronautTestVersion=3.0.3
+micronautVersion=3.2.3
+micronautTestVersion=3.0.5
 
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
-
-kotlinVersion=1.6.0
-junitVersion=5.7.2
-kotestVersion=4.6.0
-natsVersion=2.11.4
 
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
@@ -25,4 +21,6 @@ apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
 
 org.gradle.caching=true
-org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.parallel=true
+org.gradle.daemon=true
