--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'io.micronaut.build.internal.nats-module'
     id "java"
 }
 
@@ -7,24 +8,16 @@ repositories {
 }
 
 dependencies {
-    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
-    testImplementation "io.micronaut:micronaut-inject"
-    testImplementation project(":nats")
-    testImplementation "org.testcontainers:testcontainers:1.16.3"
-    testImplementation 'org.awaitility:awaitility:4.1.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-    testRuntimeOnly "ch.qos.logback:logback-classic:1.2.6"
-    testImplementation "io.projectreactor:reactor-core"
+    testImplementation projects.nats
+
+    testAnnotationProcessor mn.micronaut.inject.java
+    testImplementation mn.micronaut.inject
+    testImplementation mn.reactor
+    testImplementation libs.awaitility
+    testImplementation libs.testcontainers
+    testImplementation libs.junit.jupiter.api
 }
 
 compileJava.options.compilerArgs += '-parameters'
 compileTestJava.options.compilerArgs += '-parameters'
 
-test {
-    useJUnitPlatform()
-
-    jvmArgs '-Duser.country=US'
-    jvmArgs '-Duser.language=en'
-    failFast = true
-}
