--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'io.micronaut.build.internal.nats-module'
-    id "java"
+    id "java-library"
 }
 
 repositories {
@@ -8,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation projects.nats
+    testImplementation project(':nats')
 
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.inject
