--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -1,10 +1,9 @@
 plugins {
-    id 'io.micronaut.build.internal.nats-module'
+    id 'io.micronaut.build.internal.module'
 }
 
 dependencies {
     annotationProcessor mn.micronaut.inject.java
-    annotationProcessor "io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion"
 
     api mn.micronaut.messaging
     api mn.micronaut.inject
@@ -13,7 +12,7 @@ dependencies {
     implementation mn.reactor
 
     compileOnly mn.micronaut.management
-    compileOnly 'io.micronaut.micrometer:micronaut-micrometer-core'
+    compileOnly libs.micronaut.micrometer.core
 
     testImplementation libs.testcontainers.spock
     testImplementation mn.micronaut.inject.groovy
