--- a/settings.gradle
+++ b/settings.gradle
@@ -6,25 +6,17 @@ pluginManagement {
 }
 
 plugins {
-    id("io.micronaut.build.shared.settings") version "5.2.3"
+    id("io.micronaut.build.shared.settings") version "5.3.9"
 }
 
 rootProject.name = 'nats-parent'
 
 include 'nats'
+include 'nats-bom'
 include 'docs-examples:example-groovy'
 include 'docs-examples:example-java'
 include 'docs-examples:example-kotlin'
 
-enableFeaturePreview 'TYPESAFE_PROJECT_ACCESSORS'
-
-dependencyResolutionManagement {
-    repositories {
-        mavenCentral()
-    }
-    versionCatalogs {
-        mn {
-            from "io.micronaut:micronaut-bom:${providers.gradleProperty('micronautVersion').get()}"
-        }
-    }
+micronautBuild {
+    importMicronautCatalog()
 }
