updates micronaut version to 3.5.2 (#248)
* updates micronaut version to 3.3.4

* updates micronaut version to 3.4.4

* updates micronaut version to 3.5.0

* updates micronaut version to 3.5.1

* updates micronaut version to 3.5.2

* updates gradle to 7.5-RC2

* adds missing jcapiCmp changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,20 @@
 projectVersion=3.1.0-SNAPSHOT
 projectGroup=io.micronaut.nats
 micronautDocsVersion=2.0.0
-micronautVersion=3.2.3
-micronautTestVersion=3.0.5
-
-groovyVersion=3.0.9
-spockVersion=2.0-groovy-3.0
-
+micronautVersion=3.5.2
+micronautTestVersion=3.2.0
+groovyVersion=3.0.10
+spockVersion=2.1-groovy-3.0
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 developers=Joachim Grimm
-
-githubCoreBranch=3.3.x
+# Micronaut core branch for BOM pull requests
+githubCoreBranch=3.5.x
 bomProperty=micronautNatsIoVersion
-
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
-
 org.gradle.caching=true
-org.gradle.jvmargs=-Xmx2048M
-org.gradle.parallel=true
-org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx1g
