adds support for push consumers

--- a/jetstream/src/test/resources/application-test.yml
+++ b/jetstream/src/test/resources/application-test.yml
@@ -8,6 +8,5 @@ jetstream:
       widgets:
         storage-type: Memory
         subjects:
-          - subject.one
-          - subject.two
+          - subject.>
 
