ci: version to 4.0.0 Micronaut 4.0.0-SNAPSHOT githubCoreBranch=4.0.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-projectVersion=3.1.1-SNAPSHOT
+projectVersion=4.0.0-SNAPSHOT
 projectGroup=io.micronaut.nats
 micronautDocsVersion=2.0.0
-micronautVersion=3.5.2
-micronautTestVersion=3.2.0
-groovyVersion=3.0.10
+micronautVersion=4.0.0-SNAPSHOT
+micronautTestVersion=3.5.0
+groovyVersion=3.0.12
 spockVersion=2.1-groovy-3.0
 title=Micronaut Nats
 projectDesc=Integration between Micronaut and nats.io
@@ -11,7 +11,7 @@ projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-nats
 developers=Joachim Grimm
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=3.5.x
+githubCoreBranch=4.0.x
 bomProperty=micronautNatsIoVersion
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
 apinats=https://javadoc.io/doc/io.nats/jnats/
