--- a/docs-examples/example-kotlin/build.gradle
+++ b/docs-examples/example-kotlin/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias libs.plugins.kotlin.jvm
     alias libs.plugins.kotlin.kapt
+    id 'io.micronaut.build.internal.nats-tests'
 }
 
 repositories {
