--- a/docs-examples/example-groovy/build.gradle
+++ b/docs-examples/example-groovy/build.gradle
@@ -15,7 +15,15 @@ dependencies {
     testImplementation mn.reactor
     testImplementation mn.micronaut.test.spock
     testImplementation mn.spock
+    testRuntimeOnly libs.junit.jupiter.engine
+}
 
+test {
+    useJUnitPlatform()
+
+    jvmArgs '-Duser.country=US'
+    jvmArgs '-Duser.language=en'
+    failFast = true
 }
 
 tasks.withType(GroovyCompile) {
