adds documentation for jetstream

--- a/docs-examples/example-groovy/src/test/resources/application-test.yml
+++ b/docs-examples/example-groovy/src/test/resources/application-test.yml
@@ -6,7 +6,7 @@ nats:
   default:
     jetstream:
       streams:
-        widgets:
+        events:
           storage-type: Memory
           subjects:
-            - subject.>
+            - events.>
