migrate to typesafe projects accessors

--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation project(':nats')
+    testImplementation projects.nats
 
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.inject
