--- a/docs-examples/example-groovy/build.gradle
+++ b/docs-examples/example-groovy/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation project(":nats")
+    testImplementation projects.nats
 
     testCompileOnly mn.micronaut.inject.groovy
     testImplementation libs.testcontainers
