--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,8 @@ include 'docs-examples:example-groovy'
 include 'docs-examples:example-java'
 include 'docs-examples:example-kotlin'
 
+enableFeaturePreview 'TYPESAFE_PROJECT_ACCESSORS'
+
 micronautBuild {
     importMicronautCatalog()
 }
