--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'io.micronaut.build.internal.docs'
-    id 'io.micronaut.build.internal.dependency-updates'
     id 'io.micronaut.build.internal.quality-reporting'
+}
+
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    }
 }
