--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,18 @@
 [versions]
+micronaut = '4.0.0-SNAPSHOT'
+micronaut-docs = '2.0.0'
+micronaut-test = '3.7.0'
+groovy = "4.0.6"
+spock = "2.3-groovy-4.0"
+
+
 awaitility = '4.2.0'
 junit = '5.9.1'
 kotest = '4.6.4'
-kotlin = '1.7.20'
+kotlin = '1.7.21'
 testcontainers = '1.17.5'
 nats = '2.16.0'
+
 
 [libraries]
 jnats = { module = 'io.nats:jnats', version.ref = 'nats'}
@@ -15,7 +23,6 @@ kotlin-reflect = { module = 'org.jetbrains.kotlin:kotlin-reflect', version.ref =
 kotlin-stdlib = { module = 'org.jetbrains.kotlin:kotlin-stdlib-jdk8', version.ref = 'kotlin' }
 testcontainers = { module = 'org.testcontainers:testcontainers', version.ref = 'testcontainers' }
 testcontainers-spock = { module = 'org.testcontainers:spock', version.ref = 'testcontainers' }
-micronaut-micrometer-core = { module = 'io.micronaut.micrometer:micronaut-micrometer-core', version = '' }
 
 [plugins]
 kotlin-jvm = { id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin' }
