--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -3,16 +3,16 @@ plugins {
 }
 
 dependencies {
-    annotationProcessor mn.micronaut.inject.java
-
     api mn.micronaut.messaging
-    api mn.micronaut.inject
     api libs.jnats
 
-    implementation mn.reactor
+    implementation mn.micronaut.serde.jackson
+    implementation mn.micronaut.jackson.core
+    implementation mn.micronaut.reactor
+    implementation mn.micronaut.cache.caffeine
 
     compileOnly mn.micronaut.management
-    compileOnly libs.micronaut.micrometer.core
+    compileOnly mn.micronaut.micrometer.core
 
     testImplementation libs.testcontainers.spock
     testImplementation mn.micronaut.inject.groovy
