--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,29 @@
 [versions]
+micronaut = '4.0.0-SNAPSHOT'
+micronaut-docs = '2.0.0'
+micronaut-test = '3.7.0'
+groovy = "4.0.6"
+spock = "2.3-groovy-4.0"
+
+
 awaitility = '4.2.0'
 junit = '5.9.1'
-kotest = '4.6.4'
-kotlin = '1.7.20'
+kotest = '5.5.4'
+kotlin = '1.7.21'
 testcontainers = '1.17.5'
 nats = '2.16.0'
+
 
 [libraries]
 jnats = { module = 'io.nats:jnats', version.ref = 'nats'}
 awaitility = { module = 'org.awaitility:awaitility', version.ref = 'awaitility' }
 junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api', version.ref = 'junit' }
+junit-jupiter-engine = { module = 'org.junit.jupiter:junit-jupiter-engine', version.ref = 'junit' }
 kotest = { module = 'io.kotest:kotest-runner-junit5', version.ref = 'kotest' }
 kotlin-reflect = { module = 'org.jetbrains.kotlin:kotlin-reflect', version.ref = 'kotlin' }
 kotlin-stdlib = { module = 'org.jetbrains.kotlin:kotlin-stdlib-jdk8', version.ref = 'kotlin' }
 testcontainers = { module = 'org.testcontainers:testcontainers', version.ref = 'testcontainers' }
 testcontainers-spock = { module = 'org.testcontainers:spock', version.ref = 'testcontainers' }
-micronaut-micrometer-core = { module = 'io.micronaut.micrometer:micronaut-micrometer-core', version = '' }
 
 [plugins]
 kotlin-jvm = { id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin' }
