Migrate to build plugins 6.1.1, update version catalog and dependencies to correspond to changed bom/platform architecture, misc build fixes and cleanup.

--- a/docs-examples/example-groovy/build.gradle
+++ b/docs-examples/example-groovy/build.gradle
@@ -14,9 +14,9 @@ dependencies {
     testImplementation libs.testcontainers.spock
     testImplementation mn.micronaut.inject
     testImplementation mn.reactor
-    testImplementation mn.micronaut.test.spock
-    testImplementation mn.spock
+    testImplementation mnTest.micronaut.test.spock
     testRuntimeOnly libs.junit.jupiter.engine
+    testRuntimeOnly mn.snakeyaml
 }
 
 test {
