--- a/docs-examples/example-kotlin/build.gradle
+++ b/docs-examples/example-kotlin/build.gradle
@@ -8,12 +8,11 @@ dependencies {
     kaptTest(mn.micronaut.inject.java)
 
     testImplementation projects.nats
-    testImplementation libs.kotest
-    testImplementation libs.kotlin.reflect
-    testImplementation libs.kotlin.stdlib
+    testImplementation mnTest.micronaut.test.kotest5
     testImplementation libs.testcontainers
     testImplementation mn.reactor
     testRuntimeOnly libs.junit.jupiter.engine
+    testRuntimeOnly mn.snakeyaml
 }
 
 test {
