--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation libs.testcontainers
     testImplementation libs.junit.jupiter.api
     testRuntimeOnly libs.junit.jupiter.engine
+    testRuntimeOnly mn.snakeyaml
 }
 
 compileJava.options.compilerArgs += '-parameters'
