--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -38,5 +38,8 @@ jetstream:
       title: Consumer
       pushconsumer: Push based
       pullconsumer: Pull based
-
+  keyvalue:
+    title: Key/Value Store
+    kv_configuration: Configuration
+    usage: Usage
 repository: Repository
